fix(dto): add missing fields and methods to DTOs and services
- Add permission field to RoleResponse, RoleCreateRequest, RoleUpdateRequest
- Add status field to UserUpdateRequest
- Add missing MenuService methods: findByFilter, createMenu, updateMenu, deleteMenu, getMenuTree, getMenuTreeByUserId, findRolesByMenuId
- Implement MenuService methods in MenuServiceImpl with DTO conversions
- Add MenuMapper methods: findByFilter, countByFilter with SQL implementations
- Fix Integer to Long type conversions in role and menu ID mappings
- Replace List.of() with Collections.emptyList() for Java 8 compatibility
- Fix List<SysRole> to List<RoleResponse> type mismatch in UserServiceImpl

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>